根据永乐和美娜的意见修改

--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -1,30 +1,31 @@
 # 日志备份的准备工作
 
-在打开日志归档功能前，您需要使用 `ALTER SYSTEM` 命令配置 `LOG_ARCHIVE_DEST` 参数。`sys` 租户无需设置 `LOG_ARCHIVE_DEST` 参数。
+在打开日志归档功能前，您需要使用 `ALTER SYSTEM` 命令配置归档目的端即 `LOG_ARCHIVE_DEST` 参数。由于系统租户不包含用户数据，是集群管理用的租户，不支持备份恢复，故 `sys` 租户无需配置归档目的端。
 
 ## 配置归档目的端
 
 配置归档目的端的操作主要是设置 `LOCATION`、`PIECE_SWITCH_INRERVAL` 和 `BINDING` 属性。
 
-1. 用户租户的租户管理员登录到数据库。
+1. `sys` 租户或用户租户的租户管理员登录到数据库。
 
    <main id="notice" type='explain'>
         <h4>说明</h4>
    <p>MySQL 模式的管理员用户为 <code>root</code> 用户，Oracle 模式的管理员用户为 <code>SYS</code> 用户。</p>
    </main>
 
-2. 设置归档目的端参数。
+2. 配置归档目的端。
 
-    语句如下：
+   * 系统租户为指定租户配置归档目的端
 
-   ```shell
-   obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]';
-   ```
+     ```sql
+     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]' TENANT = tenant_name;
+     ```
 
-   <main id="notice" type='explain'>
-   <h4>说明</h4>
-   <p>如果通过 <code>sys<code> 租户配置归档目的端，则需要在语句中指定待发起日志归档的用户租户名（不能指定 <code>sys</code> 租户），例如：<code>ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive' TENANT = mysql_tenant;</code>。</p>
-   </main>
+   * 用户租户配置本租户的归档目的端
+
+     ```sql
+     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]';
+     ```
 
    设置后，可通过 `DBA_OB_ARCHIVELOG_SUMMARY` 视图查看详细设置信息，具体操作请参见 [查看归档参数](8.view-parameters-of-log-archive.md)。
 
@@ -49,6 +50,8 @@
             当归档目的端的介质为 NFS 时，设置归档目的端的示例如下：
 
             ```shell
+            obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive' TENANT = mysql_tenant;
+
             obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive';
             ```
 
@@ -78,6 +81,8 @@
             当归档目的端的介质为 OSS 时，设置归档目的端，并配置 `tagging` 清理模式的示例如下：
 
             ```shell
+            obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging' TENANT = mysql_tenant;
+
             obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=oss://oceanbase-test-bucket/backup/archive?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=tagging';
             ```
 
@@ -94,9 +99,9 @@
         示例如下：
 
         ```shell
+        obclient> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Mandatory' TENANT = mysql_tenant;
+
         obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Optional';
-        
-        obclient> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Mandatory';
         ```
 
    * 配置 `PIECE_SWITCH_INTERVAL` 属性 (可选)
@@ -106,6 +111,8 @@
         例如，配置归档路径且每隔一天切分一个日志 `piece` 的示例如下：
 
         ```shell
+        obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Optional PIECE_SWITCH_INTERVAL=1d' TENANT = mysql_tenant;
+
         obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=file:///data/nfs/backup/archive BINDING=Optional PIECE_SWITCH_INTERVAL=1d';
         ```
 
@@ -124,7 +131,7 @@
 您需要重新执行以下语句进行修改。
 
 ```shell
-obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive BINDING=Mandatory PIECE_SWITCH_INTERVAL=2d';
+obclient [(none)]> ALTER SYSTEM SET LOG_ARCHIVE_DEST = 'LOCATION=file:///data/nfs/backup/archive BINDING=Mandatory PIECE_SWITCH_INTERVAL=2d' TENANT = mysql_tenant;
 ```
 
 ## 相关文档
