--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -1,6 +1,6 @@
 # 备份前准备
 
-在进行备份前，需要配置备份目的端及备份相关的参数。
+在进行备份前，您需要配置备份目的端即 `DATA_BACKUP_DEST` 参数。由于系统租户不包含用户数据，是集群管理用的租户，不支持备份恢复，故 `sys` 租户无需配置备份目的端。
 
 ## 数据备份架构
 
@@ -10,7 +10,7 @@
 
 ## 配置备份目的端
 
-1. 用户租户的租户管理员登录数据库。
+1. `sys` 租户或用户租户的租户管理员登录数据库。
 
    <main id="notice" type='explain'>
         <h4>说明</h4>
@@ -21,16 +21,19 @@
 
    目前，OceanBase 数据库支持 NFS 、阿里云 OSS 作为备份目的端。
 
-   语句如下：
+   * 系统租户为指定租户配置备份目的端
 
-   ```sql
-   ALTER SYSTEM SET data_backup_dest='data_backup_path';
-   ```
+     ```sql
+     ALTER SYSTEM SET DATA_BACKUP_DEST = 'data_backup_path' TENANT = mysql_tenant;
+     ```
 
-   <main id="notice" type='explain'>
-   <h4>说明</h4>
-   <p>如果通过 <code>sys<code> 租户配置备份目的端，则需要在语句中指定待发起备份的用户租户名（不能指定是 <code>sys</code> 租户），例如：<code>ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data' TENANT = mysql_tenant;</code>。</p>
-   </main>
+   * 用户租户配置本租户的备份目的端
+
+     语句如下：
+
+     ```sql
+     ALTER SYSTEM SET DATA_BACKUP_DEST = 'data_backup_path';
+     ```
 
    例如：
   
@@ -48,8 +51,10 @@
 
       设置备份目的端的示例如下：
 
-      ```sql
-      obclient [(none)]> ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data';
+      ```shell
+      obclient [(none)]> ALTER SYSTEM SET DATA_BACKUP_DEST = 'file:///data/nfs/backup/data' TENANT = mysql_tenant;
+
+      obclient [(none)]> ALTER SYSTEM SET DATA_BACKUP_DEST = 'file:///data/nfs/backup/data';
       ```
 
    * 阿里云 OSS
@@ -70,8 +75,10 @@
 
       设置备份目的端并配置备份文件的清理模式的示例如下：
 
-      ```sql
-      obclient [(none)]> ALTER SYSTEM SET data_backup_dest='oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete';
+      ```shell
+      obclient [(none)]> ALTER SYSTEM SET DATA_BACKUP_DEST = 'oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete' TENANT = mysql_tenant;
+
+      obclient [(none)]> ALTER SYSTEM SET DATA_BACKUP_DEST = 'oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete';
       ```
 
 3. 配置成功后，`sys` 租户可通过视图 `CDB_OB_BACKUP_PARAMETER` 查看当前集群中各租户的备份路径等信息。
