--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/1.gv-ob-sql-audit.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/3.monitor-sql-execution-performance/1.gv-ob-sql-audit.md
@@ -124,7 +124,7 @@
 | PS_INNER_STMT_ID              | bigint(20)          | NO             | 请求对应的 Prepare ID： <ul><li> `-1`：表示 SQL 语句没有使用 PS 协议   </li><li>> 非 `-1`：表示 SQL 语句使用了 PS 协议，为 PS 协议在内部对该语句返回的唯一标志</li></ul>    |
 |  TX_ID       | bigint(20)  | NO             | 请求对应的事务的 Hash 值     |
 |  SNAPSHOT_VERSION       | bigint(20)unsigned  | NO             | 当前语句的快照读版本号     |
-| REQUEST_TYPE            | bigint(20)          | number(38)     |请求对应的类型： <ul><li> 0：表示非法   <li> 1：表示是一个内部请求</li>  <li> 2：表示是一个本地请求，例如，Local 计划</li>   <li> 3：表示远程请求</li>   <li> 4：表示分布式请求 </li>  <li> 5：表示 SQL 的 Prepare 请求</li>   <li> 6：表示 SQL 得到 Execute Stmt 请求</li></ul>    |
+| REQUEST_TYPE            | bigint(20)          | number(38)     |请求对应的类型： <ul><li> 0：表示非法   <li> 1：表示是一个内部请求</li>  <li> 2：表示是一个本地请求，例如，Local 计划</li>   <li> 3：表示远程请求</li>   <li> 4：表示分布式请求 </li>  <li> 5：表示 SQL 的 Prepare 请求</li>   <li> 6：表示 SQL 得到 Execute Stmt 请求</li>   <li> 7: 表示 SQL 得到 Fetch 请求</li>   <li>8: 表示 SQL 得到 send_piece 请求 </li>   <li>9: 表示 SQL 得到 get_piece 请求 </li>   <li>10: 表示 SQL 得到send_long_data 请求</li>   <li>11: 表示当前 SQL 是 PL 调用的内部 SQL</li></ul>    |
 | IS_BATCHED_MULTI_STMT   | tinyint(4)          | number(38)     |是否进行 Batch Multi Stmt 的优化    |
 | OB_TRACE_INFO           | VARCHAR2(4096)      | VARCHAR2(4096)  |用户设置的 Trace 信息      |
 | PLAN_HASH               | bigint(20) unsigned | number(38)     |执行计划的 Hash 值   |
