--- a/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/4.data-backup/1.preparation-before-data-backup.md
@@ -2,7 +2,6 @@
 
 在进行备份前，您需要配置备份目的端即 `DATA_BACKUP_DEST` 参数。由于系统租户不包含用户数据，是集群管理用的租户，不支持备份恢复，故 `sys` 租户无需配置备份目的端。
 
-
 ## 数据备份架构
 
 数据备份优先选择 Follower 副本进行备份。数据备份的架构如下图所示。
@@ -54,15 +53,9 @@
       设置备份目的端的示例如下：
 
       ```shell
-<<<<<<< mwx400easy_of_usebugfix0308
       obclient [(none)]> ALTER SYSTEM SET DATA_BACKUP_DEST = 'file:///data/nfs/backup/data' TENANT = mysql_tenant;
 
       obclient [(none)]> ALTER SYSTEM SET DATA_BACKUP_DEST = 'file:///data/nfs/backup/data';
-
-=======
-      obclient [(none)]> ALTER SYSTEM SET data_backup_dest='file:///data/nfs/backup/data';
-
->>>>>>> V4.0.0_easy_of_use
       ```
 
    * 阿里云 OSS
@@ -83,29 +76,16 @@
 
       设置备份目的端并配置备份文件的清理模式的示例如下：
 
-<<<<<<< mwx400easy_of_usebugfix0308
       ```shell
       obclient [(none)]> ALTER SYSTEM SET DATA_BACKUP_DEST = 'oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete' TENANT = mysql_tenant;
 
       obclient [(none)]> ALTER SYSTEM SET DATA_BACKUP_DEST = 'oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete';
-
-=======
-      ```sql
-      obclient [(none)]> ALTER SYSTEM SET data_backup_dest='oss://oceanbase-test-bucket/backup/?host=xxx.aliyun-inc.com&access_id=xxx&access_key=xxx&delete_mode=delete';
-
->>>>>>> V4.0.0_easy_of_use
       ```
 
 3. 配置成功后，`sys` 租户可通过视图 `CDB_OB_BACKUP_PARAMETER` 查看当前集群中各租户的备份路径等信息。
 
-<<<<<<< mwx400easy_of_usebugfix0308
-   ```sql
-
-=======
    ```shell
-
->>>>>>> V4.0.0_easy_of_use
-   obclient> SELECT * FROM oceanbase.CDB_OB_BACKUP_PARAMETER\G
+   obclient [(none)]> SELECT * FROM oceanbase.CDB_OB_BACKUP_PARAMETER\G
    *************************** 1. row ***************************
    TENANT_ID: 1002
         NAME: data_backup_dest
@@ -116,8 +96,8 @@
 
 配置项 `data_backup_dest` 设置成功后，默认系统会在配置的目的端所在的目录下创建一个 `format` 文件，用于校验备份目的端的有效性信息，确保目的端内数据的完整性。故，在配置数据备份的目的端 `data_backup_dest` 时，需要注意以下事项：
 
-* 如果 `format` 文件不存在，则要求配置的目的端所在的目录为空，配置项才能设置成功。否则，系统会报 `-9080` 的错误，提示 format 文件不存在。
+* 如果 `format` 文件不存在，则要求配置的目的端所在的目录为空，配置项才能设置成功。否则，系统会报 `-9081` 的错误，提示 format 文件不存在。
 
-* 如果 `format` 文件已存在，则要求 `format` 文件的内容检验通过，配置项才能设置成功。否则，系统会报 `-9080` 的错误，提示 format 文件不匹配， format 文件的内容校验主要是检查集群、租户与备份目的端类型等与当前操作的集群、租户及备份目的端类型是否匹配。
+* 如果 `format` 文件已存在，则要求 `format` 文件的内容检验通过，配置项才能设置成功。否则，系统会报 `-9081` 的错误，提示 format 文件不匹配， format 文件的内容校验主要是检查集群、租户与备份目的端类型等与当前操作的集群、租户及备份目的端类型是否匹配。
 
 * 在执行备份任务时，如果 `format` 文件不存在或 `format` 文件校验不通过，任务会发起失败。
