--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/87.show-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/87.show-of-mysql-mode.md
@@ -39,6 +39,7 @@ SHOW {
    | [STORAGE] ENGINES
    | PRIVILEGES
    | RECYCLEBIN
+   | SEQUENCE [like_or_where_clause]
 };
 
 like_or_where_clause:
@@ -52,38 +53,39 @@ opt_for_grant_user:
 
 ## 参数解释
 
-|                                       参数                                        |                                                               描述                                                                |
-|---------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------|
-| \[FULL\] TABLES \[{FROM \| IN} database_name                                    | 展示 `database_name` 库中所有的表。 `FULL` 关键字用于展示表类型。                                                                   |
-| {DATABASES \| SCHEMAS} \[STATUS\]                                               | 展示当前租户内的所有数据库。 `STATUS` 关键字用于展示数据库的读写属性。                                                                        |
-| \[FULL\] {COLUMNS \| FIELDS} {FROM \| IN} rel_name                              | 展示关系 `rel_name` 的列。 `FULL` 关键字用于展示列的字符序、权限与注释。                                                                  |
-| TABLE STATUS \[{FROM \| IN} database_name\]                                     | 展示 `database_name` 库中所有表的详细信息。                                                                                                  |
-| PROCEDURE STATUS \[{FROM \| IN} database_name\]                                 | 展示 `database_name` 库中所有存储过程的详细信息。                                                                                               |
-| FUNCTION STATUS \[{FROM \| IN} database_name\]                                  | 展示 `database_name` 库中所有函数的详细信息。                                                                                                 |
-| {GLOBAL \| SESSION \| LOCAL} VARIABLES                                          | 展示系统变量。                                                                                                                         |
-| {CHARSET \| CHARACTER SET}                                                      | 展示支持的字符集。                                                                                                                       |
-| COLLATION                                                                       | 展示支持的字符序。                                                                                                                       |
-| PARAMETERS \[like_or_where_clause\] tenant_name                                 | 展示系统配置项。                                                                                                                        |
-| {INDEX \| INDEXES \| KEYS} {FROM \| IN} rel_name \[{FROM \| IN} database_name\] | 展示关系 `rel_name` 上的索引或键。                                                                                                         |
-| \[FULL\] PROCESS LIST                                                           | 展示当前的会话及其状态。 `FULL` 关键字用于展示连接的 IP 地址、端口号与 OBProxy 的会话 ID。                                                       |
-| TABLEGROUPS                                                                     | 展示表组信息。                                                                                                                         |
-| {GLOBAL \| SESSION \| LOCAL} STATUS                                             | 展示会话的状态。                                                                                                                        |
-| TENANT \[STATUS\]                                                               | 展示当前的租户名。 `STATUS` 关键字用于展示租户的读写状态。                                                                              |
-| CREATE TENANT tenant_name                                                       | 查看创建租户的语句。 sys 租户可查看所有租户的创建语句。 业务租户仅能查看自身的创建语句。                                                 |
-| CREATE TABLEGROUP tablegroup_name                                               | 查看创建表组的语句。                                                                                                                      |
+|                                       参数                           |                        描述         |
+|--------------------------------------------------|-------------------------------------------------------------------|
+| \[FULL\] TABLES \[{FROM \| IN} database_name                                    | 展示 `database_name` 库中所有的表。 `FULL` 关键字用于展示表类型。   |
+| {DATABASES \| SCHEMAS} \[STATUS\]                                               | 展示当前租户内的所有数据库。 `STATUS` 关键字用于展示数据库的读写属性。   |
+| \[FULL\] {COLUMNS \| FIELDS} {FROM \| IN} rel_name                              | 展示关系 `rel_name` 的列。 `FULL` 关键字用于展示列的字符序、权限与注释。  |
+| TABLE STATUS \[{FROM \| IN} database_name\]                                     | 展示 `database_name` 库中所有表的详细信息。  |
+| PROCEDURE STATUS \[{FROM \| IN} database_name\]                                 | 展示 `database_name` 库中所有存储过程的详细信息。     |
+| FUNCTION STATUS \[{FROM \| IN} database_name\]                                  | 展示 `database_name` 库中所有函数的详细信息。   |
+| {GLOBAL \| SESSION \| LOCAL} VARIABLES                                          | 展示系统变量。  |
+| {CHARSET \| CHARACTER SET}                                                      | 展示支持的字符集。    |
+| COLLATION                                                                       | 展示支持的字符序。 |
+| PARAMETERS \[like_or_where_clause\] tenant_name                                 | 展示系统配置项。                   |
+| {INDEX \| INDEXES \| KEYS} {FROM \| IN} rel_name \[{FROM \| IN} database_name\] | 展示关系 `rel_name` 上的索引或键。  |
+| \[FULL\] PROCESS LIST                                                           | 展示当前的会话及其状态。 `FULL` 关键字用于展示连接的 IP 地址、端口号与 OBProxy 的会话 ID。   |
+| TABLEGROUPS                                                                     | 展示表组信息。  |
+| {GLOBAL \| SESSION \| LOCAL} STATUS                                             | 展示会话的状态。 |
+| TENANT \[STATUS\]                                                               | 展示当前的租户名。 `STATUS` 关键字用于展示租户的读写状态。  |
+| CREATE TENANT tenant_name                                                       | 查看创建租户的语句。 sys 租户可查看所有租户的创建语句。 业务租户仅能查看自身的创建语句。  |
+| CREATE TABLEGROUP tablegroup_name                                               | 查看创建表组的语句。  |
 | CREATE {DATABASE \| SCHEMA} \[IF NOT EXISTS\] database_name                     | 查看创建数据库的语句。 `IF NOT EXISTS` 关键字用于在创建语句中添加 `IF NOT EXISTS`。                                                      |
-| CREATE TABLE table_name                                                         | 查看创建表的语句。                                                                                                                       |
-| CREATE VIEW view_name                                                           | 查看创建视图的语句。                                                                                                                      |
-| CREATE PROCEDURE proc_name                                                      | 查看创建存储过程的语句。                                                                                                                    |
-| CREATE FUNCTION func_name                                                       | 查看创建函数的语句。                                                                                                                      |
-| WARNINGS \[LIMIT N \| LIMIT N,M\]                                               | 查看告警。                                                                                                                           |
-| COUNT(\*) WARNINGS                                                              | 查看告警。                                                                                                                           |
-| ERRORS \[LIMIT N \| LIMIT N,M\]                                                 | 查看错误。                                                                                                                           |
-| COUNT(\*) ERRORS                                                                | 查看错误。                                                                                                                           |
+| CREATE TABLE table_name                                                         | 查看创建表的语句。  |
+| CREATE VIEW view_name                                                           | 查看创建视图的语句。       |
+| CREATE PROCEDURE proc_name                                                      | 查看创建存储过程的语句。   |
+| CREATE FUNCTION func_name                                                       | 查看创建函数的语句。    |
+| WARNINGS \[LIMIT N \| LIMIT N,M\]                                               | 查看告警。 |
+| COUNT(\*) WARNINGS                                                              | 查看告警。  |
+| ERRORS \[LIMIT N \| LIMIT N,M\]                                                 | 查看错误。 |
+| COUNT(\*) ERRORS                                                                | 查看错误。            |
 | GRANTS opt_for_grant_user                                                       | 查看指定用户的权限。 如果不指定用户名，则显示当前用户的权限。当前用户可以查看自己的权限。 如果需要查看其他指定用户的权限，必须拥有对 `mysql.user` 的 `SELECT` 权限。 |
-| \[STORAGE\] ENGINES                                                             | 查看存储引擎，OceanBase 数据库的存储引擎为 `OceanBase`。                                                                                         |
-| PRIVILEGES                                                                      | 查看 MySQL 各项权限的描述。                                                                                                               |
-| RECYCLEBIN                                                                      | 查看回收站。                                                                                                                          |
+| \[STORAGE\] ENGINES                                                             | 查看存储引擎，OceanBase 数据库的存储引擎为 `OceanBase`。    |
+| PRIVILEGES                                                                      | 查看 MySQL 各项权限的描述。     |
+| RECYCLEBIN                                                                      | 查看回收站。     |
+| SEQUENCE | 查看所创建的序列。|
 
 ## 示例
 
@@ -189,4 +191,40 @@ opt_for_grant_user:
   | __recycle_$_10_1629093637659648 | t1            | TABLE | 2021-08-16 14:00:37.660550 |
   | __recycle_$_10_1629093721748992 | t1            | TABLE | 2021-08-16 14:02:01.748691 |
   +---------------------------------+---------------+-------+----------------------------+
+  ```
+
+* 查看所创建的序列。
+
+  ```sql
+  obclient> CREATE SEQUENCE IF NOT EXISTS s3 ORDER CACHE 100 INCREMENT BY 3 MAXVALUE 99999999999;
+  Query OK, 0 rows affected 
+
+  obclient> SHOW SEQUENCE LIKE 's%';
+  +------------------------+
+  | Sequences_in_test (s%) |
+  +------------------------+
+  | s1                     |
+  | s2                     |
+  | s3                     |
+  +------------------------+
+  3 rows in set
+
+  obclient> SHOW SEQUENCE WHERE sequence_name='s3';
+  +-------------------+
+  | Sequences_in_test |
+  +-------------------+
+  | s3                |
+  +-------------------+
+  1 row in set 
+
+  obclient> SHOW SEQUENCE;
+  +-------------------+
+  | Sequences_in_test |
+  +-------------------+
+  | a2                |
+  | s1                |
+  | s2                |
+  | s3                |
+  +-------------------+
+  4 rows in set 
   ```
