410 配置项相关迁移1

--- a/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/2.table-of-mysql-mode/2.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/2.table-of-mysql-mode/2.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md
@@ -1,8 +1,8 @@
-# 数据类型概述 
+# 数据类型概述
 
 在 OceanBase 数据库中，表中的每一列都有一个数据类型，每个数据类型都对应独特的存储格式、约束以及取值范围。
 
-OceanBase 数据库支持的 SQL 数据类型包含以下三种：
+OceanBase 数据库支持的 SQL 数据类型包含以下几种：
 
 * 数值类型
 
@@ -18,10 +18,4 @@ OceanBase 数据库支持的 SQL 数据类型包含以下三种：
 
 * 集合类型
 
-* JSON 数据类型
-
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>目前暂不支持空间类型。</p>
-  </main>
-
+* 多模数据类型
