--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/3.vertical-scaling-of-tenant-resources.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/3.vertical-scaling-of-tenant-resources.md
@@ -28,8 +28,6 @@ obclient>ALTER RESOURCE UNIT uc1 MAX_CPU 6, MIN_MEMORY '36G';
 obclient> ALTER RESOURCE POOL rp1 UNIT 'uc2';
 ```
 
-理论上 OceanBase 数据库支持对资源规格 `MIN_CPU`、`MAX_CPU`、`MIN_MEMORY` 以及 `MAX_MEMORY` 同时进行修改。
-
 ## 示例及使用限制
 
 通常情况下，通过修改资源配置和切换资源配置的方式都能对租户的服务能力进行调整。对应到租户层面，实际上是调整了租户资源单元的规格。对资源规格的修改通常有两种场景，即调大资源规格和调小资源规格。
@@ -88,4 +86,4 @@ Sum(max_mem) <= CPU_CAPACITY * resource_hard_limit;
 
 ### 调小资源规格
 
-根据上面调大资源规格的示例，系统还支持将资源池的资源规格调小。调小资源规格能够保证机器资源规格足够用，但仍然存在限制，该限制主要出现在调小资源规格的 `MIN_MEMORY` 选项上，一个租户在某物理机上的实际内存使用量记录为 `MEM_USED`，在调小其资源规格时，对于为租户提供服务的每台物理机，需要满足资源配置的 `MIN_MEMORY` 大于等于租户在该物理机上当前的实际使用内存。如果在调整时，`MIN_MEMORY` 的值小于 `MEM_USED`，则本次资源规格的调整会失败，需要进行一次数据的 Checkpoint 操作来释放内存，然后再重新尝试调小资源池的配置规格。
+根据上面调大资源规格的示例，系统还支持将资源池的资源规格调小。调小资源规格能够保证机器资源规格足够用，但仍然存在限制，该限制主要出现在调小资源规格的 `MIN_MEMORY` 选项上，一个租户在某物理机上的实际内存使用量记录为 `MEM_USED`，在调小其资源规格时，对于为租户提供服务的每台物理机，需要满足资源配置的 `MIN_MEMORY` 大于等于租户在该物理机上当前的实际使用内存。如果在调整时，`MIN_MEMORY` 的值小于 `MEM_USED`，则本次资源规格的调整会失败，需要进行一次数据的转储来释放内存，然后再重新尝试调小资源池的配置规格。
