--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/179.user_tab_columns-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/2.dictionary-view-of-oracle-mode/179.user_tab_columns-of-oracle-mode.md
@@ -1,29 +1,25 @@
-USER_TAB_COLUMNS
-=====================================
+# USER_TAB_COLUMNS
 
-功能
------------
+## 功能
 
-查看当前用户拥有的表的所有列。
+查看当前用户拥有的表、视图的所有列。
 
   <main id="notice" >
     <h4>功能适用性</h4>
     <p>该内容仅适用于 OceanBase 数据库企业版。OceanBase 数据库社区版仅提供 MySQL 模式。</p>
   </main>
 
-相关视图
--------------
+## 相关视图
 
 * ALL_TAB_COLUMNS
 
 * DBA_TAB_COLUMNS
 
-字段说明
--------------
+## 字段说明
 
 |       **字段名称**       |    **类型**     | **是否可以为 NULL** |                **描述**                 |
 |----------------------|---------------|----------------|---------------------------------------|
-| TABLE_NAME           | VARCHAR2(128) | NO             | 表的名字                               |
+| TABLE_NAME           | VARCHAR2(128) | NO             | 表、视图的名字                               |
 | COLUMN_NAME          | VARCHAR2(128) | NO             | 列名                                    |
 | DATA_TYPE            | VARCHAR2(128) | NO             | 列类型                                   |
 | DATA_TYPE_MOD        | VARCHAR2(3)   | NO             | 目前暂不支持该字段，且当前该字段默认为 NULL              |
@@ -53,9 +49,9 @@ USER_TAB_COLUMNS
 | V80_FMT_IMAGE        | VARCHAR2(3)   | NO             | 目前暂不支持该字段，且当前该字段默认为 NULL              |
 | DATA_UPGRADED        | VARCHAR2(3)   | NO             | 目前暂不支持该字段，且当前该字段默认为 NULL              |
 | HISTOGRAM            | VARCHAR2(15)  | NO             | 目前暂不支持该字段，且当前该字段默认为 NULL              |
-| DEFAULT_ON_NULL      | VARCHAR2(3)   | NO             | 目前暂不支持该字段，当前该字段默认为 NULL               |
-| IDENTITY_COLUMN      | VARCHAR2(3)   | NO             | 目前暂不支持该字段，当前该字段默认为 NULL               |
-| EVALUATION_EDITION   | VARCHAR2(128) | NO             | 目前暂不支持该字段，当前该字段默认为 NULL               |
-| UNUSABLE_BEFORE      | VARCHAR2(128) | NO             | 目前暂不支持该字段，当前该字段默认为 NULL               |
-| UNUSABLE_BEGINNING   | VARCHAR2(128) | NO             | 目前暂不支持该字段，当前该字段默认为 NULL               |
-| COLLATION            | VARCHAR2(100) | NO             | 目前暂不支持该字段，当前该字段默认为 NULL               |
+| DEFAULT_ON_NULL | VARCHAR2(3) | NO | 目前暂不支持该字段，当前该字段默认为 NULL |
+|  IDENTITY_COLUMN       |  VARCHAR2(3)      |  NO    |  目前暂不支持该字段，当前该字段默认为 NULL |
+|  EVALUATION_EDITION    |  VARCHAR2(128)    |  NO    |  目前暂不支持该字段，当前该字段默认为 NULL |
+|  UNUSABLE_BEFORE       |  VARCHAR2(128)    |  NO    | 目前暂不支持该字段，当前该字段默认为 NULL |
+| UNUSABLE_BEGINNING    |  VARCHAR2(128)    |  NO    |  目前暂不支持该字段，当前该字段默认为 NULL |
+|  COLLATION             |  VARCHAR2(100)    |  NO    | 目前暂不支持该字段，当前该字段默认为 NULL |
