--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/89.gv-active_session_history-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/89.gv-active_session_history-of-oracle-mode.md
@@ -1,5 +1,7 @@
 # GV$ACTIVE_SESSION_HISTORY
+
 ## 功能
+
 展示活跃会话历史记录。
 
 ## 字段说明
@@ -15,8 +17,9 @@
 | SESSION_ID | NUMBER | NO | 被采样会话的 ID |
 | SESSION_TYPE | VARCHAR2(10) | NO | 会话类型：<li>FOREGROUND：前台会话，即：用户会话<li>（暂不支持）BACKGROUND：后台会话 |
 | SESSION_STATE | VARCHAR2(7) | NO | 会话状态：<li>ON CPU：当前没有等待，正在执行 SQL 逻辑<li>WAITING：当前正在等待，详细等待内容参考 `EVENT` 字段 |
-| SQL_ID | VARCHAR2(32) | NO | SQL ID |
-| TRACE_ID | VARCHAR2(64)  | NO   | 算子的 Trace ID |
+| SQL_ID | VARCHAR2(32) | YES | SQL ID |
+|PLAN_ID |  bigint(20) |NO  |采样到的 SQL 在 PLAN CACHE 中的计划 ID， 用于将采样点与计划关联起来|
+| TRACE_ID | VARCHAR2(64)  | YES   | 算子的 Trace ID |
 | EVENT | VARCHAR2(64) | NO | 等待事件的描述 |
 | EVENT_NO | NUMBER | NO | 等待事件内部编号，用于和其他表关联查询 |
 | P1TEXT | VARCHAR2(64) | NO | 等待事件的参数 1 的名称，EVENT 不同，这里的名称也会相应变化 |
@@ -28,7 +31,7 @@
 | WAIT_CLASS | VARCHAR2(64) | NO | 等待事件所属类型 |
 | WAIT_CLASS_ID | NUMBER | NO | 等待事件所属类型的 ID，用于和其他表关联查询 |
 | TIME_WAITED | NUMBER | NO | 该等待事件的总等待时间，单位为微秒（us） |
-| SQL_PLAN_LINE_ID | NUMBER        | NO   | 采样时刻正在执行的算子 ID |
+| SQL_PLAN_LINE_ID | NUMBER        | YES   | 会话在采样时 SQL 算子在 SQL 计划中的编号   |
 | IN_PARSE | VARCHAR2(1) | NO | 会话在采样时是否正在做 SQL Parse |
 | IN_PL_PARSE | VARCHAR2(1) | NO | 会话在采样时是否正在做 SQL PL Parse |
 | IN_PLAN_CACHE | VARCHAR2(1) | NO | 会话在采样时是否正在做 Plan Cache 匹配 |
@@ -36,7 +39,7 @@
 | IN_SQL_EXECUTION | VARCHAR2(1) | NO | 会话在采样时是否正在做 SQL 执行 |
 | IN_PX_EXECUTION | VARCHAR2(1) | NO | 会话在采样时是否正在做 SQL 并行执行。当会话处于本状态时，一定也处于 IN_SQL_EXECUTION 状态 |
 | IN_SEQUENCE_LOAD | VARCHAR2(1) | NO | 会话在采样时是否正在做自增列或 SEQUENCE 取值 |
-| MODULE | VARCHAR2(64) | NO | 会话在采样时记录的 MODULE 值。该字段的值一直为 NULL |
-| ACTION | VARCHAR2(64) | NO | 会话在采样时记录的 ACTION 值。该字段的值一直为 NULL |
-| CLIENT_ID | VARCHAR2(64) | NO | 会话在采样时记录的 CLIENT_ID 值。该字段的值一直为 NULL |
-| BACKTRACE | VARCHAR2(512) | NO | 辅助调试字段，用于记录事件发生时的代码调用栈。该字段的值一直为 NULL |
+| MODULE | VARCHAR2(64) | YES | 会话在采样时记录的 MODULE 值。该字段的值一直为 NULL |
+| ACTION | VARCHAR2(64) | YES | 会话在采样时记录的 ACTION 值。该字段的值一直为 NULL |
+| CLIENT_ID | VARCHAR2(64) | YES | 会话在采样时记录的 CLIENT_ID 值。该字段的值一直为 NULL |
+| BACKTRACE | VARCHAR2(512) | YES | 辅助调试字段，用于记录事件发生时的代码调用栈。该字段的值一直为 NULL |
