--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/2.0001-3999-of-mysql-mode.md
@@ -128,9 +128,9 @@
 
 * 兼容 MySQL 错误码：1059
 
-## ERROR 1060 (42S21) : Duplicate column name '%.\*s'
+## ERROR 1060 (42S21) : Duplicate column group name '%.*s'
 
-* OceanBase 错误码：5008
+* OceanBase 错误码：5404
 
 * 兼容 MySQL 错误码：1060
 
@@ -344,6 +344,12 @@
 
 * 兼容 MySQL 错误码：1103
 
+## ERROR 1108 (HY000） : Incorrect parameters to procedure \'%.*s\'
+
+* OceanBase 错误码：5406
+
+* 兼容 MySQL 错误码：1108
+
 ## ERROR 1109 (42S02) : Unknown table '%.\*s' in %.\*s
 
 * OceanBase 错误码：5200
@@ -452,7 +458,7 @@
 
 * 兼容 MySQL 错误码：1138
 
-## ERROR 1139 (42000) : Got  ## ERROR 'empty (sub)expression' from regexp
+## ERROR 1139 (42000) : Got error '%s' from regexp
 
 * OceanBase 错误码：5115
 
@@ -1138,7 +1144,7 @@
 
 ## ERROR 1353 (HY000) : View's SELECT and view's field list have different column counts
 
-* OceanBase 错误码：5242
+* OceanBase 错误码：5740
 
 * 兼容 MySQL 错误码：1353
 
@@ -1154,8 +1160,8 @@
 
 * 兼容 MySQL 错误码：1360
 
-## ERROR 1362 (HY000) : Updating of %s row is not allowed in 
-%s trigger
+## ERROR 1362 (HY000) : Updating of %s row is not allowed in %s trigger
+
 * OceanBase 错误码：9584
 
 * 兼容 MySQL 错误码：1362
@@ -1213,6 +1219,12 @@
 * OceanBase 错误码：5971
 
 * 兼容 MySQL 错误码：1369
+  
+## ERROR 1382 (HY000） : The \'%.*s\' syntax is reserved for purposes internal to the OceanBase Server
+
+* OceanBase 错误码：5405
+
+* 兼容 MySQL 错误码：1382
 
 ## ERROR 1390 (54000) : Prepared statement contains too many placeholders
 
@@ -1634,6 +1646,12 @@
 
 * 兼容 MySQL 错误码：1582
 
+## ERROR 1583 (42000） : Incorrect parameters in the call to native function '%.*s'
+
+* OceanBase 错误码：5407
+
+* 兼容 MySQL 错误码：1583
+
 ## ERROR 1613 (XA106) : XA_RBTIMEOUT: Transaction branch was rolled back: took too long
 
 * OceanBase 错误码：6253
@@ -2010,27 +2028,51 @@
 
 * 兼容 MySQL 错误码：3505
 
+## ERROR 3573 (HY000) ：recursive WITH clause must use a UNION ALL operation
+
+* OceanBase 错误码：5742
+
+* 兼容 MySQL 错误码：3573
+
 ## ERROR 3574 (HY000) : Recursive Common Table Expression should have one or more non-recursive query blocks followed by one or more recursive ones: %s
 
 * OceanBase 错误码：5982
 
 * 兼容 MySQL 错误码：3574
 
+## ERROR 3575 (HY000) ：Recursive Common Table Expression can contain neither aggregation nor window functions in recursive query block
+
+* OceanBase 错误码：5758
+
+* 兼容 MySQL 错误码：3575
+
+## ERROR 3576 (HY000) ：In recursive query block of Recursive Common Table Expression, the recursive table must neither be in the right argument of a LEFT JOIN, nor be forced to be non-first with join order hints
+
+* OceanBase 错误码：5759
+
+* 兼容 MySQL 错误码：3576
+
+## ERROR 3577 (HY000) ：In recursive query block of Recursive Common Table Expression, the recursive table must be referenced only once, and not in any subquery
+
+* OceanBase 错误码：5744
+
+* 兼容 MySQL 错误码：3577
+
 ## ERROR 3581 (HY000) :A window which depends on another cannot define partitioning
 
-* OceanBase 错误码：9087
+* OceanBase 错误码：5438
 
 * 兼容 MySQL 错误码：3581
 
 ## ERROR 3582 (HY000) :Window '%.*s' has a frame definition, so cannot be referenced by another window
 
-* OceanBase 错误码：9088
+* OceanBase 错误码：5439
 
 * 兼容 MySQL 错误码：3582
 
 ## ERROR 3583 (HY000) :Window '%.*s' cannot inherit '%.*s' since both contain an ORDER BY clause
 
-* OceanBase 错误码：9089
+* OceanBase 错误码：5440
 
 * 兼容 MySQL 错误码：3583
 
@@ -2051,6 +2093,12 @@
 * OceanBase 错误码：5983
 
 * 兼容 MySQL 错误码：3596
+
+## ERROR 3636 (HY000） : Recursive query aborted after %u iterations. Try increasing @@cte_max_recursion_depth to a larger value.
+
+* OceanBase 错误码：5408
+
+* 兼容 MySQL 错误码：3636
 
 ## ERROR 3812 (HY000) : An expression of non-boolean type specified to a check constraint \\'%.\*s\\'
 
