--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/3.4000-4499-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/3.4000-4499-of-mysql-mode.md
@@ -32,7 +32,7 @@
 
 * 错误原因：网络断开导致监听服务启动失败。
 
-* 解决方式：请联系技术支持人员协助排查。
+* 解决方式：请更换空闲端口后重启 observer 进程。
 
 ## ERROR 4005 (HY000) : The object is initialized twice
 
@@ -152,9 +152,12 @@
 
 * OceanBase 错误码：4013
 
-* 错误原因：租户或 OBServer 节点内存不足。
+* 错误原因：内存分配失败。
+  * 物理内存耗尽。
+  * 单次分配内存大于 4G。
+  * CTX、Tenant、Server 的内存占用达到上限。
 
-* 解决方式：如果是普通租户内存不足，通过增加租户内存规格解决；如果是 OBServer 节点内存不足，请联系技术支持人员协助排查。
+* 解决方式：请联系技术支持人员协助排查。
 
 ## ERROR 4014 (HY000) : Inner state error
 
@@ -2066,4 +2069,30 @@ ERROR4179 (HY000) : %s not allowed
 
 * 错误原因：DDL SSTable 返回交叉。
 
+* 解决方式：请联系技术支持人员协助排查。
+
+## ERROR 4393 (HY000) : observer start process failure
+
+* OceanBase 错误码：4393
+
+* 错误原因：observer 进程启动时内部组件或服务初始化，启动失败。
+
+* 解决方式：请联系技术支持人员协助排查。
+
+## ERROR 4394 (HY000) : observer stop process failure
+
+* OceanBase 错误码：4394
+* 错误原因：observer 进程退出时内部组件或服务有报错。
+* 解决方式：请联系技术支持人员协助排查。
+
+## ERROR 4395 (HY000) : observice start process has failure
+
+* OceanBase 错误码：4395
+* 错误原因：observer 进程启动时内部组件或服务初始化，启动失败。
+* 解决方式：请联系技术支持人员协助排查。
+
+## ERROR 4396 (HY000) : Worker thread pannic, thread may be terminated or hung
+
+* OceanBase 错误码：4396
+* 错误原因：工作线程发生异常中止执行。
 * 解决方式：请联系技术支持人员协助排查。
