--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/4.4500-4999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/4.4500-4999-of-mysql-mode.md
@@ -540,11 +540,13 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 
 * 解决方式：内部错误码。如果返回，请联系技术支持人员确认。
 
-## ERROR 4688 (HY000) : standby cluster support weak read only
+## ERROR 4688 (HY000) : standby tenant is read only
+
 
 * OceanBase 错误码：4688
 
-* 错误原因：备集群仅支持弱一致性读。
+* 错误原因：备集群仅支持读。
+
 
 * 解决方式：如果要修改备集群，需要执行角色切换，切换为主集群。
 
@@ -922,3 +924,35 @@ ERROR (HY000) : Timeout OB_GET_LOCATION_TIME_OUT
 * OceanBase 错误码：4746
 * 错误原因：分布式计划执行过程中，网络不稳定或节点宕机，导致调度失败。
 * 解决方式：重新执行该 SQL 语句。
+
+## ERROR 4747 (HY000) : arbitration service does not exist
+
+
+* OceanBase 错误码：4747
+
+
+* 错误原因：集群尚未配置仲裁服务的地址。
+
+
+* 解决方式：不支持在未配置仲裁服务地址的情况下做仲裁相关操作。可以通过 OCP 或执行 SQL 命令 `alter system add arbitration service‘$svr_ip:$svr_port’;` 为集群添加仲裁服务地址。
+
+
+## ERROR 4748 (HY000) : arbitration service already exist
+
+
+* OceanBase 错误码：4748
+
+
+* 错误原因：集群已经存在一个有效的仲裁服务地址。
+
+
+* 解决方式：一个集群不支持同时配置多个仲裁服务。
+  
+## ERROR 4751 (HY000) : wait degration finished timeout
+
+* OceanBase 错误码：4751
+
+* 错误原因：Stop Server 时等待租户降级超时。
+
+* 解决方式：重新发起 Stop Server 命令直到成功。
+
