--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/6.6000-6999-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/6.6000-6999-of-mysql-mode.md
@@ -484,14 +484,26 @@ ERROR 6276 (HY000) : there is an unlock operation doing, unlock conflict
 
 * 解决方法：内部错误码。请联系技术人员协助排查。
 
-ERROR 6277 (HY000) : log_ts is out of bounds of memtable
+ERROR 6277 (HY000) : scn is out of bounds of memtable
 ----------------------------------------------------------------------------------------------
 
 * OceanBase 错误码：6277
 
-* 错误原因：MemTable 设置 log_ts 时超过其边界限制。
+* 错误原因：MEMTable 设置 SCN 时超过其边界限制。
 
-* 解决方法：内部错误码。请联系技术支持人员协助排查。
+* 解决方法：内部错误码。若回显为 ERROR，请联系技术支持人员协助排查；若回显为 WARN，则表示正常 。
+
+## ERROR 6280 (HY000) : Transaction cost too much without commit or rollback
+
+* OceanBase 错误码：6280
+* 错误原因：事务存活时间较长，行锁无法释放。
+* 解决方式：请分析业务场景判断长事务是否符合预期。
+
+## ERROR 6281 (HY000) : Transaction commit cost too much
+
+* OceanBase 错误码：6281
+* 错误原因：事务提交或者回滚耗时长，事务提交异常。
+* 解决方式：请联系技术支持人员协助排查。
 
 ERROR 6302 (HY000) : log scan runnable thread stop
 -----------------------------------------------------------------------
