--- a/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/9.9000-9499-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/6.error-code-of-mysql-mode/9.9000-9499-of-mysql-mode.md
@@ -694,6 +694,30 @@ ERROR 9086 (HY000) : backup advance checkpoint by flush timeout
 
 * 解决方式：请联系技术支持人员协助排查。
 
+## ERROR 9090 (HY000) : obesi process session not exist
+
+* OceanBase 错误码：9090
+
+* 错误原因：obesi 进程会话不存在。
+
+* 解决方式：obesi 进程会自动重启，不需要人工处理。
+
+## ERROR 9091 (HY000) : Already in ARCHIVELOG mode
+
+* OceanBase 错误码：9091
+
+* 错误原因：已经处于 ARCHIVELOG 模式。
+
+* 解决方式：当前状态提示，无需处理。
+
+## ERROR 9092 (HY000) : Already in NOARCHIVELOG mode
+
+* OceanBase 错误码：9092
+
+* 错误原因：已经处于 NOARCHIVELOG 模式。
+
+* 解决方式：当前状态提示，无需处理。
+
 ERROR 9100 (HY000) : no such file or directory
 -------------------------------------------------------------------
 
