--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/2.ora-00000-to-ora-00999-of-oracle-mode.md
@@ -117,6 +117,36 @@ ORA-00060：deadlock detected while waiting for resource
 
 * 解决方式：查看 Trace 文件并查看所涉及的事务和资源。如有必要，请重试。
 
+## ORA-00600：arbitration service does not exist
+
+* OceanBase 错误码：4747
+
+* SQLSTATE：HY000
+
+* 错误原因：集群尚未配置仲裁服务的地址。
+
+* 解决方式：不支持在未配置仲裁服务地址的情况下做仲裁相关操作。可以通过 OCP 或执行 SQL 命令 `alter system add arbitration service‘$svr_ip:$svr_port’;` 为集群添加仲裁服务地址。
+
+## ORA-00600：arbitration service already exist
+
+* OceanBase 错误码：4748
+
+* SQLSTATE：HY000
+
+* 错误原因：集群已经存在一个有效的仲裁服务地址。
+
+* 解决方式：一个集群不支持同时配置多个仲裁服务。
+
+## EORA-00600: wait degration finished timeout
+
+* OceanBase 错误码：4751
+
+* SQLSTATE：HY000
+
+* 错误原因：Stop Server 时等待租户降级超时。
+
+* 解决方式：重新发起 Stop Server 命令直到成功。
+
 ORA-00600：Invalid JSON text
 -------------------------------------------------
 
