--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/7.ora-10000-to-ora-19999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/7.ora-10000-to-ora-19999-of-oracle-mode.md
@@ -736,13 +736,13 @@ ORA-14767：Cannot specify this interval with existing high bounds
 
 * 解决方式：如果在执行 `CREATE TABLE` 操作，请尝试为最后一个分区指定不同的上限值或不同的间隔。如果在执行 `ALTER TABLE SET INTERVAL` 操作，请选择一个不同的间隔，或者修改该表以更改最后一个分区的上限。
 
-ORA-16000：standby cluster support weak read only
+ORA-16000：standby tenant is read only
 ---------------------------------------------------------------------
 
 * OceanBase 错误码：4688
 
 * SQLSTATE：HY000
 
-* 错误原因：备集群仅支持弱一致性读，DDL 或者 DML 会触发这个报错。
+* 错误原因：备集群仅支持读，DDL 等写语句会触发这个报错。
 
 * 解决方式：如果要修改备集群，需要执行角色切换，切换为主集群。
