--- a/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/8.ora-20000-to-ora-29999-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/7.error-code-of-oracle-mode/8.ora-20000-to-ora-29999-of-oracle-mode.md
@@ -125,6 +125,16 @@ ORA-22928：invalid privilege on directories
 
 * 解决方法：只能授予或撤销对于目录的 `CREATE`、`DELETE`、`READ`、`WRITE` 和 `EXECUTE`权限。不要授予或撤销其他权限。
 
+## ORA-22990：LOB locators cannot span transactions
+
+* OceanBase 错误码：9715
+
+* SQLSTATE：HY000
+
+* 错误原因：LOB 句柄不支持跨事务的写操作。
+
+* 解决方法：对 LOB 句柄进行重新赋值后再进行写操作。
+
 ORA-22998：CLOB or NCLOB in multibyte character set not supported
 -------------------------------------------------------------------------------------
 
