--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/24.information_schema-table_constraints-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/24.information_schema-table_constraints-of-mysql-mode.md
@@ -1,25 +1,17 @@
-information_schema.TABLE_CONSTRAINTS 
-=========================================================
+# information_schema.TABLE_CONSTRAINTS
 
-功能 
------------
+## 功能
 
 描述表约束信息。
 
-字段说明 
--------------
-
-
+## 字段说明
 
 |      **字段名称**      |    **类型**     | **是否可以为 NULL** | **描述** |
 |--------------------|---------------|----------------|--------|
-| CONSTRAINT_CATALOG | varchar(4096) | NO             | 约束目录   |
+| CONSTRAINT_CATALOG | varchar(64)   | NO             | 约束目录   |
 | CONSTRAINT_SCHEMA  | varchar(128)  | NO             | 数据库名   |
-| CONSTRAINT_NAME    | varchar(128)  | NO             | 约束名称   |
+| CONSTRAINT_NAME    | varchar(256)  | NO             | 约束名称   |
 | TABLE_SCHEMA       | varchar(128)  | NO             | 数据库名   |
 | TABLE_NAME         | varchar(256)  | NO             | 表名     |
-| CONSTRAINT_TYPE    | varchar(128)  | NO             | 约束类型   |
-| ENFORCED           | varchar(4)    | NO             | 约束是否启用   |
-
-
-
+| CONSTRAINT_TYPE    | varchar(11)  | NO             | 约束类型   |
+| ENFORCED           | varchar(3)    | NO             | 约束是否启用   |
