--- a/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/3.information_schema-check_constraints-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.system-reference/4.system-view-of-mysql-mode/2.dictionary-view-of-mysql-mode/3.information_schema-check_constraints-of-mysql-mode.md
@@ -1,17 +1,14 @@
-information_schema.CHECK_CONSTRAINTS
-=========================================================
+# information_schema.CHECK_CONSTRAINTS
 
-功能
---------------------
+## 功能
 
 记录了 `CREATE TABLE` 操作时，有关表和列相关的约束信息。
 
-字段说明
-----------------------
+## 字段说明
 
 |        字段名称        |      类型       | 是否可以为 NULL |          描述           |
 |--------------------|---------------|------------|-----------------------|
-| CONSTRAINT_CATALOG | varchar(4096) | NO         | 约束所属的目录名称。该值始终为 `def` |
+| CONSTRAINT_CATALOG | varchar(64) | NO         | 约束所属的目录名称。该值始终为 `def` |
 | CONSTRAINT_SCHEMA  | varchar(128)  | NO         | 约束所属的 `SCHEMA` 名称     |
-| CONSTRAINT_NAME    | varchar(128)  | NO         | 约束的名称                 |
-| CHECK_CLAUSE       | varchar(2048) | NO         | 指定约束条件的表达式            |
+| CONSTRAINT_NAME    | varchar(64)  | NO         | 约束的名称                 |
+| CHECK_CLAUSE       | CHAR(2048) | NO         | 指定约束条件的表达式            |
