--- a/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/90.v-active_session_history-of-oracle-mode.md
+++ b/zh-CN/7.reference/5.system-reference/5.system-view-of-oracle-mode/3.performance-view-of-oracle-mode/90.v-active_session_history-of-oracle-mode.md
@@ -1,6 +1,9 @@
 # V$ACTIVE_SESSION_HISTORY
+
 ## 功能
+
 展示活跃会话历史记录。
+
 ## 字段说明
 
 | 字段名称 | 类型 | 是否可以为 NULL | 描述 |
@@ -15,6 +18,7 @@
 | SESSION_TYPE | VARCHAR2(10) | NO | 会话类型：<li>FOREGROUND：前台会话，即：用户会话<li>（暂不支持）BACKGROUND：后台会话 |
 | SESSION_STATE | VARCHAR2(7) | NO | 会话状态：<li>ON CPU：当前没有等待，正在执行 SQL 逻辑<li>WAITING：当前正在等待，详细等待内容参考 `EVENT` 字段 |
 | SQL_ID | VARCHAR2(32) | NO | SQL ID |
+|PLAN_ID |  bigint(20) |NO  |采样到的 SQL 在 PLAN CACHE 中的计划 ID， 用于将采样点与计划关联起来|
 | TRACE_ID         | VARCHAR2(64)  | NO   | 算子的 Trace ID |
 | EVENT | VARCHAR2(64) | NO | 等待事件的描述 |
 | EVENT_NO | NUMBER | NO | 等待事件内部编号，用于和其他表关联查询 |
@@ -27,7 +31,7 @@
 | WAIT_CLASS | VARCHAR2(64) | NO | 等待事件所属类型 |
 | WAIT_CLASS_ID | NUMBER | NO | 等待事件所属类型的 ID，用于和其他表关联查询 |
 | TIME_WAITED | NUMBER | NO | 该等待事件的总等待时间，单位为微秒（us） |
-| SQL_PLAN_LINE_ID | NUMBER        | NO   | 采样时刻正在执行的算子 ID |
+| SQL_PLAN_LINE_ID | NUMBER        | NO   | 会话在采样时 SQL 算子在 SQL 计划中的编号   |
 | IN_PARSE | VARCHAR2(1) | NO | 会话在采样时是否正在做 SQL Parse |
 | IN_PL_PARSE | VARCHAR2(1) | NO | 会话在采样时是否正在做 SQL PL Parse |
 | IN_PLAN_CACHE | VARCHAR2(1) | NO | 会话在采样时是否正在做 Plan Cache 匹配 |
