fix table issues

--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
@@ -1,5 +1,7 @@
 # OceanBase 数据库企业版 V3.2.4
 
+#RNDate#2022-11-01
+
 ## 版本信息
 
 - 发布时间：2022 年 11 月 1 日
@@ -75,10 +77,9 @@ OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整，
     * 日志级别定义：增加 DIAG 诊断日志级别，将无需用户感知的 WARN, ERROR 归到 DIAG 日志。对需要保留面向运维的预警/报错日志，进行日志级别分类调整，如下：
     
         | 日志级别 | 面向对象 | 定义 | 原日志级别 |
-        | --- | --- | --- | --- |
+        |---|---|---|---|
         | ERROR | DBA/用户 | OBServer 节点不能提供正常服务的异常，如磁盘满监听端口被占用等。也可能是产品后台的内部检查报错，例如 4377 (dml defensive check error), 4103 (data checksum error)等，需人工干预恢复 |  |
         | WARN | DBA/用户 | 出现非预期场景，OBServer 节点能提供服务，但行为可能不符合预期，例如写入限流告警 |  |
-
         | INFO | DBA/用户 | 系统状态变化信息 | INFO |
         | EDIAG | 研发 | Error Diagnosis, 协助故障排查的诊断信息，非预期的逻辑错误，如函数参数不符合预期等 | ERROR |
         | WDIAG | 研发 | Warning Diagnosis, 协助故障排查的诊断信息，预期内的错误，如函数返回失败 | WARN |
@@ -104,16 +105,11 @@ OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整，
 ### 配置项
 
 | 配置项 | 修改类型 | 默认值 | 新默认值 | 描述 |
-| --- | --- | --- | --- | --- |
-| enable_cgroup | 新增 | 
- | True | 是否开启 Cgroup 功能。 |
-| sql_login_thread_count | 新增 | 
- | 0 | 登录请求处理线程的数量。默认值 0 表示动态调整。 |
-| ob_query_switch_leader_retry_timeout | 新增 | 
- | 0us | 失败 Query 的最长重试时间。默认值 0us 表示关闭重试超时检查功能。 |
-| diag_syslog_per_error_limit | 新增 | 
- | 200 | 每秒钟每个错误码的诊断日志数量限制 |
-
+|---|---|---|---|---|
+| enable_cgroup | 新增 | | True | 是否开启 Cgroup 功能。 |
+| sql_login_thread_count | 新增 | | 0 | 登录请求处理线程的数量。默认值 0 表示动态调整。 |
+| ob_query_switch_leader_retry_timeout | 新增 | | 0us | 失败 Query 的最长重试时间。默认值 0us 表示关闭重试超时检查功能。 |
+| diag_syslog_per_error_limit | 新增 | | 200 | 每秒钟每个错误码的诊断日志数量限制 |
 | ob_esi_syslog_level | 修改 | INFO | WDIAG | 存储独立子进程日志级别 |
 | syslog_level | 修改 | INFO | WDIAG | 系统日志级别 |
 
@@ -148,7 +144,6 @@ OceanBase 数据库 V3.2.4 推荐使用的平台工具版本如下。
 | 组件 | 配套版本 |
 | --- | --- |
 | obproxy | V3.2.8 |
-
 | OCP | V3.3.4 |
 | ODC | V4.0.0 |
 | OMS | V3.4.0 |
