--- a/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
+++ b/zh-CN/6.manage/6.backup-and-recovery/3.log-archive/2.preparation-before-log-archive.md
@@ -1,10 +1,10 @@
-# 日志备份的准备工作
+# 日志归档的准备工作
 
-在打开日志归档功能前，您需要使用 `ALTER SYSTEM` 命令配置归档目的端即 `LOG_ARCHIVE_DEST` 参数。由于系统租户不包含用户数据，是集群管理用的租户，不支持备份恢复，故 `sys` 租户无需配置归档目的端。
+在开启日志归档功能前，您需要使用 `ALTER SYSTEM` 命令配置归档目的端即 `LOG_ARCHIVE_DEST` 参数。由于系统租户不包含用户数据，是集群管理用的租户，不支持备份恢复，故 `sys` 租户无需配置归档目的端。
 
 ## 配置归档目的端
 
-配置归档目的端的操作主要是设置 `LOCATION`、`PIECE_SWITCH_INRERVAL` 和 `BINDING` 属性。
+配置归档目的端的操作主要是设置 `LOCATION`、`PIECE_SWITCH_INTERVAL` 和 `BINDING` 属性。
 
 1. `sys` 租户或用户租户的租户管理员登录到数据库。
 
@@ -18,13 +18,13 @@
    * 系统租户为指定租户配置归档目的端
 
      ```sql
-     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]' TENANT = tenant_name;
+     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INTERVAL=xxx] [BINDING=xxx]' TENANT = tenant_name;
      ```
 
    * 用户租户配置本租户的归档目的端
 
      ```sql
-     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INRERVAL=xxx] [BINDING=xxx]';
+     ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=xxx [PIECE_SWITCH_INTERVAL=xxx] [BINDING=xxx]';
      ```
 
    设置后，可通过 `DBA_OB_ARCHIVELOG_SUMMARY` 视图查看详细设置信息，具体操作请参见 [查看归档参数](8.view-parameters-of-log-archive.md)。
