--- a/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md
+++ b/zh-CN/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md
@@ -1,94 +1,54 @@
 # 读写分离
 
-OceanBase 数据库支持读写分离部署，要求客户端将写请求路由到 ReadWrite Zone，将弱一致性读请求路由到ReadOnly Zone，此功能强依赖 ODP 的 LDC 功能。
+读写分离就是在主服务器上修改，数据会同步到备服务器，备服务器只能提供读取数据，不能写入，实现备份的同时也实现了数据库性能的优化，以及提升了服务器安全。对于单机数据库如 MySQL，读写分离指的是写请求发送给主服务器，读请求发送给备服务器。
+对于 OceanBase 数据库，我们将读写分离从服务器级别做到了表的 parition 级别，这是 OceanBase 分布式数据库的特有优势。
 
-读写分离的部署需要进行以下 4 个步骤：
+使用读写分离功能，可以将读请求发送到备份本，降低主副本压力。
 
-1. OceanBase 集群的 LDC 配置。
+<main id="notice" type='alert'>
+    <h4>注意</h4>
+    <p>使用读写分离后，读请求不保证能够读到最新的数据,时差一般在几百毫秒。</p>
+  </main>
 
-2. ODP 的 LDC 配置。
+## 配置读写分离
 
-3. ODP 的集群配置。
+要使用读写分离，需要两部分设置：
 
-4. 应用配置弱一致性读。
+1. 设置 SQL 语句为弱读：所谓弱读是指读请求不要求读到最新的数据。对于正常的 SQL 为强读，使用弱读需要一定的设置。
+2. 修改路由策略：以下图 partition1 为例，三个副本都可以提供弱读服务（主副本也可以提供读服务），通过设置路由策略，可以优先选择备副本。
 
-## OceanBase 集群的 LDC 配置
+![读写分离](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/read-write-splitting/2023-03-06%2017%2012%2017.png)
 
-1. 在客户端中使用 `root` 用户登录集群的 `sys` 租户。
+### 弱读设置
 
-2. 执行以下示例语句配置 LDC，其中 `region` 通常设置为城市名（大小写敏感）。 `idc` 代表该 Zone 所处的机房信息，通常设置为机房名（小写），`z1` 为当前设置的 Zone 的名称。它们的关系是一个 OceanBase 集群中有若干个 Region，一个 Region 有若干个 Zone，一个 Zone 对应一个 IDC 属性。
+#### 通过 Hint 设置
 
-   ```sql
-   obclient> ALTER SYSTEM MODIFY zone "z1" set region = "SHANGHAI"; 
-   
-   obclient> ALTER SYSTEM MODIFY zone "z1" set idc = "zue";
-   ```
-
-3. 检查 OBServer 节点中 LDC 设置内容是否生效，查询语句如下所示，查看返回结果中对应 Zone 的 Region Zone Type 和 IDC 项的值是否符合您的设置值。
-
-   ```sql
-   obclient> SELECT * FROM oceanbase.DBA_OB_ZONES;
-   ```
-
-## ODP 的 LDC 配置
-
-读写分离部署时，ODP 仅需正确设置好 LDC 即可。ODP 的 LDC 配置有两种方式，其中 `zue` 为示例机房。
-
-示例：
-
-* ODP 进程启动时通过参数指定进行配置（建议使用的方式）。
-
-   ```shell
-   cd /opt/taobao/install/obproxy-1.5.5
-   ./bin/obproxy -o proxy_idc_name=zue
-   ```
-
-* 在 OceanBase 支持的客户端工具中运行 `ALTER` 语句修改 ODP 配置项。
-
-   ```sql
-   obclient> ALTER PROXYCONFIG SET proxy_idc_name='zue';
-   ```
-
-   以示例 `zue` 机房为例，为 ODP 配置 LDC 后，如果应用部署在上海 `zue` 机房，当应用逻辑发起弱一致性读时，请求都是优先发往上海机房。
-
-   为 ODP 配置 LDC 后可通过下述语句检查配置是否生效。
-
-   ```sql
-   obclient> SHOW PROXYINFO IDC;
-   ```
-
-   返回结果如下所示：
-
-   ![返回结果](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6525858951/p147038.png)
-
-## OceanBase 集群配置
-
-在 OceanBase 数据库支持的客户端中使用 root 用户登录集群的业务租户，运行下述语句设置 Global 级别系统变量 `ob_route_policy` 为对应取值即可，默认取值为 `readonly_zone_first`。
+OceabBase 的 SQL 提供了弱读 hint `/*+READ_CONSISTENCY(WEAK)*/`，在 SQL 中添加该 `hint` 后，就可以开启弱读功能。
 
 ```sql
-obclient> SET @@global.ob_route_policy=readonly_zone_first;
+select /*+READ_CONSISTENCY(WEAK)*/ from t1;
 ```
 
-## 应用配置弱一致性读
+#### 通过配置项设置
 
-读写分离部署同样仅针对弱一致性读的场景才会生效。应用配置弱一致性读有以下 3 种方法。
+通过 Hint 的方式需要修改 SQL，有时修改 SQL 会比较麻烦，可以通过修改配置项 `obproxy_read_consistency` 的值设置。
 
-示例：
+1. 使用 OBProxy 管理员账号登录数据库
+2. 修改配置项
 
-* 在 SQL 中携带 Hint 来指定。
+   ```sql
+   alter proxyconfig set obproxy_read_consistency = 1;
+   ```
 
-  ```sql
-  obclient> SELECT /*+read_consistency(weak)*/ * FROM t1;
-  ```
+<main id="notice" type='explain'>
+    <h4>说明</h4>
+    <p>该配置项取值为 0 和 1，默认为 0，表示强读（需要读到最新的数据）。1 表示弱读。</p>
+  </main>
 
-* 设置 Session 级别的系统变量来指定（仅对当前 Session 生效）。
+### 修改路由策略
 
-  ```sql
-  obclient> SET @@ob_read_consistency='weak';
-  ```
+ODP 通过配置项 `proxy_route_policy` 修改路由策略，通过设置为 `follower_first` 和 `follower_only` 可以让弱读请求优先发给备副本，这两者含义如下：
 
-* 设置全局级别的系统变量来指定（对该租户的所有连接都会生效）。
-
-  ```sql
-  obclient> SET @@global.ob_read_consistency='weak';
-  ```
+* follower_first：优先选择备副本，如果备副本都不可用，选择主副本
+* follower_only：选择备副本，如果备副本都不可用，断开和客户端的连接
+上述两个策略需要根据业务场景选择
